--- a/PL/PL.csproj
+++ b/PL/PL.csproj
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="dronetolist.jpg" />
+    <None Remove="image %283%29.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BL\BL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="dronetolist.jpg" />
+    <Resource Include="image (3).png" />
   </ItemGroup>
 
 </Project>
