--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,8 +6,6 @@
 
   <ItemGroup>
     <Folder Include="BL\" />
-    <Folder Include="BlApi\" />
-    <Folder Include="BO\" />
   </ItemGroup>
 
   <ItemGroup>
